Bug #30381 Strange results with get_class_vars()

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@170545 c90b9560-bf6c-de11-be94-00142212c4b1